--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@
   bottom: 0;
   right: 40%;
   width: 40%;
-  background-color:mistyrose;
+  background-color:white;
 }
 .content {
   position: relative;
@@ -13,21 +13,31 @@
   width: 60%; 
 }
  .project {
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
    position: relative;
    width: 100%;
-   height: 120vh;
+   height: 110vh;
  }
 
+ .upper-filler {
+  flex: 1;
+}
+
+.lower-text {
+  flex: 1;
+}
  .first-project {
-  background-color: olivedrab;
+  background-color: rgb(213, 175, 245);
 }
 
-.phone {
-  box-shadow: 5px 10px #888888;
+.image {
+  display: block;
+  margin: auto; 
 }
-
 .second-project {
-  background-color: rgb(229, 124, 236);
+  background-color: rgb(146, 200, 176);
 }
 .third-project {
   background-color: rgb(114, 166, 235);
