--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,8 @@
+body {
+  display: flexbox;
+  flex-direction: row;
+}
+
 .sidebar {
   position: fixed;
   left: 0;
@@ -7,6 +12,39 @@
   width: 40%;
   background-color:white;
 }
+
+::-moz-selection { /* Code for Firefox */
+  color: #333;
+  background: white;
+}
+
+::selection {
+  color: #333;
+  background: white;
+}
+
+.title {
+  position: relative;
+  font-family: 'Martel Sans', sans-serif;
+  font-size: 36px;
+  color: #444;
+  line-height: 3rem;
+  top: 80px;
+  left: 80px;
+  width: 200px;
+}
+
+.subtitle {
+  position: relative;
+  top: 100px; 
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 200;
+  font-size: 20px;
+  left: 80px;
+  width: 70%;
+  min-width: 200px;
+}
+
 .content {
   position: relative;
   left: 40%;
@@ -19,6 +57,7 @@
    position: relative;
    width: 100%;
    height: 110vh;
+   min-height: 250px;
  }
 
  .upper-filler {
@@ -29,13 +68,34 @@
   flex: 1;
 }
  .first-project {
-  background-color: rgb(213, 175, 245);
+  background-color: rgb(223, 207, 236);
 }
 
 .image {
   display: block;
   margin: auto; 
 }
+
+.img-frame {
+  margin: auto;
+}
+
+img {
+  width: 100%;
+}
+
+.frame1 {
+  width: 40%;
+}
+
+.frame2, .frame3 {
+  width: 85%;
+}
+
+.frame4 {
+   width: 35%; 
+ }
+
 .second-project {
   background-color: rgb(146, 200, 176);
 }
@@ -43,5 +103,22 @@
   background-color: rgb(114, 166, 235);
 }
 .fourth-project {
-  background-color: orange;
+  background-color: rgb(240, 192, 104);
+}
+
+@media all and (max-width: 992px) {
+  body {
+    flex-direction: column;
+  }
+
+  .sidebar {
+    position: relative;
+    height: 110vh;
+    width: 100%;
+  }
+
+  .content {
+    left: 0;
+    width: 100%
+  }
 }
