--- a/assets/style.css
+++ b/assets/style.css
@@ -57,7 +57,7 @@ body {
    position: relative;
    width: 100%;
    height: 110vh;
-   min-height: 250px;
+   min-height: 550px;
  }
 
  .upper-filler {
@@ -66,9 +66,42 @@ body {
 
 .lower-text {
   flex: 1;
+  color: white;
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 2rem;
+  margin: 10px 30px;
 }
+
+.lower-text img {
+  width: 25px;
+  height: 25px;
+  vertical-align: middle;
+}
+
+.project-link {
+  display: block;
+  color: white;
+  text-decoration: none;
+}
+
+.lower-text a:hover {
+  color:rgb(58, 57, 57);
+  transition: 0.5s;
+} 
+
  .first-project {
-  background-color: rgb(223, 207, 236);
+  background-color: rgb(182, 132, 174);
+}
+.second-project {
+  background-color: rgb(118, 199, 149);
+}
+.third-project {
+  background-color: rgb(114, 166, 235);
+}
+.fourth-project {
+  background-color: rgb(240, 192, 104);
 }
 
 .image {
@@ -78,10 +111,12 @@ body {
 
 .img-frame {
   margin: auto;
+  max-height: 80%;  
 }
 
 img {
-  width: 100%;
+  max-width: 100%;
+  max-height: 90%;
 }
 
 .frame1 {
@@ -93,18 +128,9 @@ img {
 }
 
 .frame4 {
-   width: 35%; 
- }
+   width: 35%;
+}
 
-.second-project {
-  background-color: rgb(146, 200, 176);
-}
-.third-project {
-  background-color: rgb(114, 166, 235);
-}
-.fourth-project {
-  background-color: rgb(240, 192, 104);
-}
 
 @media all and (max-width: 992px) {
   body {
@@ -114,6 +140,7 @@ img {
   .sidebar {
     position: relative;
     height: 110vh;
+    min-height: 500px;
     width: 100%;
   }
 
