--- a/assets/style.css
+++ b/assets/style.css
@@ -61,7 +61,7 @@ body {
   position: relative;
   left: 80px;
   top: 140px;
-  font-size: 30px;
+  font-size: 35px;
 }
 
 .social-links a {
@@ -69,20 +69,31 @@ body {
   text-decoration: none;
 }
 
-.github {margin-right: 15px;}
-.linkedin {margin: 0 15px }
-.twitter {margin-left: 15px;}
+.icon {
+  position: relative;
+  bottom: 0px;
+}
+.github { margin-right: 15px }
+.linkedin { margin: 0 15px }
+.twitter  {margin-left: 15px; }
+
 .github:hover {
   color: black;
+  bottom: 2px;
+  transition: color, bottom  0.5s ;
 }
 
 .linkedin:hover {
-  color: blue;
+  color: #0e76a8;
+  bottom: 2px;
+  transition: 0.5s;
 }
 
 .twitter:hover
 {
   color: #1DA1F2;
+  bottom: 2px;
+  transition: 0.5s;
 }
 
 .content {
