--- a/assets/style.css
+++ b/assets/style.css
@@ -29,14 +29,14 @@ body {
   font-size: 36px;
   color: #444;
   line-height: 3rem;
-  top: 80px;
+  top: 70px;
   left: 80px;
   width: 200px;
 }
 
 .subtitle {
   position: relative;
-  top: 100px; 
+  top: 90px; 
   font-family: 'Work Sans', sans-serif;
   font-weight: 200;
   font-size: 20px;
@@ -60,7 +60,7 @@ body {
 .social-links {
   position: relative;
   left: 80px;
-  top: 140px;
+  top: 120px;
   font-size: 35px;
 }
 
@@ -94,6 +94,38 @@ body {
   color: #1DA1F2;
   bottom: 2px;
   transition: 0.5s;
+}
+
+.contact-link {
+  display: block;
+  position: relative;
+  left: 80px;
+  top: 170px;
+  color: white;
+  text-decoration: none;
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 300;
+  height: 50px;
+  width: 200px;
+  background-color: rgb(61, 148, 219);
+  border-radius: 40px;
+}
+
+.contact-link :hover {
+  background-color: rgb(4, 100, 179);
+  border-radius: 40px;
+  transition: background-color 0.5s;
+}
+
+.contact-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+}
+
+.contact-msg {
+  text-align: center;
 }
 
 .content {
