--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -493,7 +493,7 @@ form {
 
 
 
-/* Media query tablet screens */
+/*                                           Media query tablet screens                */
 
 @media all and (max-width: 1023.98px) {
   .header-shape {
@@ -504,7 +504,7 @@ form {
   }
   .footer-shape {
     width: 100%;
-    height: 450px;
+    height: 330px;
     background-size: initial;
     overflow: hidden;
   }
@@ -584,7 +584,40 @@ form {
   .about-box{
     width: 100%
   }
-
+  .contact-box {
+    width: 80vw;
+    margin-top: 1.5em;
+  }
+  .contact-text {
+    margin-bottom: 3em;
+  }
+  form {
+    margin-top:2em;
+  }
+  
+  .text-input {
+    height: 9vh;
+    border: 1px solid #ACCDFF;
+    border-radius: 1em;
+    padding-left: 1.5em;
+  }
+  
+  .name-input, .mail-input {
+    width: 48.8%;
+    height: 2em;
+    margin-bottom: 1.5em;
+  }
+  
+  .name-input {
+    margin-right: 0.6em;
+  }
+  
+  .message-input{
+    width: 100%;
+    height: 5em;
+    padding-top: 1em;
+  }
+    
   .btn {
     margin-top: 1.5em;
     margin-bottom: 0.5;
@@ -666,8 +699,7 @@ form {
 
 
 
-
-/* Media query small devices */
+/*                                              Media query small devices            */
 
 @media all and (max-width: 767.98px) {
   .header-shape {
@@ -729,7 +761,7 @@ form {
   }
   .preview {
     width: 90%;
-    height: 20em;
+    height: 40vh;
     min-height: 100px;
     margin-bottom: 1em;
   }
@@ -756,6 +788,9 @@ form {
   .contact-box{
     width: 100%;
     margin-bottom: 2em ;
+  }
+  .contact-text {
+    margin-bottom: 3em;
   }
 
   form {
@@ -840,4 +875,63 @@ form {
     top: 80%;
   } 
   
+}
+
+/*                                             Media query small devices landscape */
+
+@media (orientation: landscape) and (max-width: 767.98px) {
+  
+  .preview {
+    width: 80%;
+    height: 95vh;
+    left:10%;
+    margin-bottom: 1em;
+  }
+  
+  .btn-info {
+    width: 25%;
+    top: 95%;
+    height: 2em;
+    background-color: #FA4969;
+    border-radius: 2em;
+  }
+  .btn-info a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    font-size: 0.8rem;
+    padding: 0.7em;
+    text-align: center;
+    text-decoration: none;
+  }
+  .btn-info:hover{
+    transition: ease-in-out 300ms;
+    background-color: #FF869C;
+  }
+  .btn-live{
+    right: 32%;
+    background-image: url('../images/live.png');
+    background-position: 90% 50%;
+    background-repeat: no-repeat;
+  }
+  .btn-source{
+    right: 5%;
+    background-image: url('../images/github.png');
+    background-position: 90% 50%;
+    background-repeat: no-repeat;
+  }
+  .project-name{
+    top: 70%;
+    left: 10%;  
+  }
+  .technologies {
+    position: absolute;
+    top: 80%;
+    left: 10%;
+  } 
+  .project-description{
+    top: 90%;
+    font-size: 0.7rem;
+  } 
+
 }
