--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -326,11 +326,19 @@ form {
 }
 .bottom-line{
   border-top: 1px solid #6877ff;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   height: 7em;
   color: white;
   padding-top: 1em;
   text-align: right;
+}
+.attribution{
+  line-height: 2em;
+  font-size: 0.7rem;
+}
+.attribution a{
+  color: #999999;
+  text-decoration: underline;
 }
 
 .footer-shape {
