Add transition to attribution link

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -340,6 +340,10 @@ form {
   color: #999999;
   text-decoration: underline;
 }
+.attribution a:hover {
+  color: white;
+  transition: 300ms;
+}
 
 .footer-shape {
   position: absolute;
